<resources>
    <string name="app_name">Calendar Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cancel">戻る</string>
    <string name="title">タイトル</string>
    <string name="StartDayStartTime">開始日時・時刻</string>
    <string name="SelectTime">時刻選択</string>
    <string name="EndDayEndTime">終了日時・時刻</string>
    <string name="taskHint">予定を入力</string>

    // MainActivity
    <string name="pwd_title">パスワード</string>
    <string name="pwd_enter"><font size="15">パスワードを入力してください</font></string>
    <string name="pwd_send">送信</string>
    <string name="pwd_forgot">パスワードを忘れた</string>


    // ImageActivity
    <string name="img_title">画像を5つ選択してください</string>
    <string name="img_send">送信</string>
    <string name="img_count">0</string>
    <string name="img_count_msg">個目がセットされました</string>
    <string name="img_reset">リセット</string>


    // StopActivity
    <string name="stop">ロックアウトしました</string>
    <string name="stop_msg">３０分後に解除されます</string>

    // ForgetActivity
    <string name="fgt_title">パスワードの設定・再設定</string>
    <string name="fgt_current">現在のパスワード</string>
    <string name="fgt_new">新しいパスワード</string>
    <string name="fgt_re">新しいパスワードを再入力 (確認)</string>
    <string name="fgt_change">変更</string>
    <string name="fgt_back">戻る</string>

    //
    <string name="taskAddBtn">予定追加</string>
    <string name="year"><u>２０２２</u></string>

    // FirstActivity
    <string name="fst_title">パスワードを作成</string>
    <string name="fst_warning">※ 数字のみ、5文字(半角)</string>
    <string name="fst_enter"><font size="15">パスワードを入力してください</font></string>
    <string name="fst_send">設定</string>

    // SecondActivity
    <string name="scd_title">画像を5つ選択してください</string>
    <string name="scd_count">0</string>
    <string name="scd_count_msg">個目がセットされました</string>
    <string name="scd_send">設定</string>
    <string name="scd_reset">リセット</string>
    <string name="scd_warning">＊動物、数字の両方を組み合わせろ</string>

    // Common First・SecondActivity
    <string name="syoki">初期設定</string>


</resources>