<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p0468_m"
    tools:context=".ForgotActivity">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layerCalendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <com.beardedhen.androidbootstrap.BootstrapLabel
                    android:id="@+id/fgtTextView"
                    android:layout_width="294dp"
                    android:layout_height="48dp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/fgt_title"
                    app:bootstrapBrand="regular" />
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="100dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/fgtCurrentPassword"
                        android:layout_width="238dp"
                        android:layout_height="48dp"
                        android:background="@drawable/border"
                        android:ems="10"
                        android:hint="@string/fgt_current"
                        android:inputType="numberPassword"
                        android:maxLength="5"
                        app:bootstrapBrand="primary"
                        app:roundedCorners="true" />
                </LinearLayout>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/fgtNewPassword"
                        android:layout_width="238dp"
                        android:layout_height="48dp"
                        android:background="@drawable/border"
                        android:ems="10"
                        android:hint="@string/fgt_new"
                        android:inputType="numberPassword"
                        android:maxLength="5"
                        app:bootstrapBrand="primary"
                        app:roundedCorners="true" />
                </LinearLayout>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/fgtRePassword"
                        android:layout_width="238dp"
                        android:layout_height="48dp"
                        android:background="@drawable/border"
                        android:ems="10"
                        android:hint="@string/fgt_re"
                        android:inputType="numberPassword"
                        android:maxLength="5"
                        app:bootstrapBrand="primary"
                        app:roundedCorners="true" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="60dp"
                    android:gravity="center">
                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:id="@+id/fgtButton"
                        android:layout_width="86dp"
                        android:layout_height="52dp"
                        android:text="@string/fgt_change"
                        app:bootstrapBrand="primary"
                        app:roundedCorners="true" />
                    <Space
                        android:layout_width="50dp"
                        android:layout_height="wrap_content" />
                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:id="@+id/fgtButton2"
                        android:layout_width="86dp"
                        android:layout_height="52dp"
                        android:text="@string/fgt_back"
                        app:bootstrapBrand="primary"
                        app:roundedCorners="true" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>











</androidx.constraintlayout.widget.ConstraintLayout>