<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p0468_m"
    tools:context=".SecondActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/syoki2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/syoki"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/firstWarning"
                android:layout_width="330dp"
                android:layout_height="25dp"
                android:text="@string/scd_warning"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <com.beardedhen.androidbootstrap.BootstrapLabel
                android:id="@+id/secondTitle"
                android:layout_width="333dp"
                android:layout_height="73dp"
                android:autoSizeTextType="uniform"
                android:text="@string/scd_title"
                android:textSize="30sp"
                app:bootstrapBrand="regular"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <com.beardedhen.androidbootstrap.AwesomeTextView
                    android:id="@+id/secondTv2"
                    android:layout_width="67dp"
                    android:layout_height="56dp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/scd_count"
                    android:textAlignment="center"
                    android:textSize="48sp"
                    app:bootstrapBrand="primary" />

                <TextView
                    android:id="@+id/secondTv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scd_count_msg"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/imageZero"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:src="@drawable/illustrain01_moji10"
                        app:layout_column="0"
                        app:layout_constraintEnd_toStartOf="@+id/imageOne"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ImgTextView2"
                        app:layout_row="0" />

                    <ImageView
                        android:id="@+id/imageOne"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:src="@drawable/illustrain01_moji01"
                        app:layout_column="1"
                        app:layout_row="0" />

                    <ImageView
                        android:id="@+id/imageTwo"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_row="0"
                        android:layout_column="2"
                        android:src="@drawable/illustrain01_moji02"
                        app:layout_column="2"
                        app:layout_row="0" />

                    <ImageView
                        android:id="@+id/imageThree"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_row="0"
                        android:layout_column="3"
                        android:src="@drawable/illustrain01_moji03"
                        app:layout_column="3"
                        app:layout_row="0" />

                    <ImageView
                        android:id="@+id/imageFour"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/illustrain01_moji04"
                        app:layout_column="4"
                        app:layout_row="0" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/imageFive"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/illustrain01_moji05" />

                    <ImageView
                        android:id="@+id/imageSix"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/illustrain01_moji06" />

                    <ImageView
                        android:id="@+id/imageSeven"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/illustrain01_moji07" />

                    <ImageView
                        android:id="@+id/imageEight"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/illustrain01_moji08" />

                    <ImageView
                        android:id="@+id/imageNine"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/illustrain01_moji09" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/anomalocaris"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:srcCompat="@drawable/anomalocaris" />

                    <ImageView
                        android:id="@+id/coelacanth"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:srcCompat="@drawable/coelacanth" />

                    <ImageView
                        android:id="@+id/nautilus"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:srcCompat="@drawable/nautilus" />

                    <ImageView
                        android:id="@+id/mammoth"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:srcCompat="@drawable/mammoth" />

                    <ImageView
                        android:id="@+id/smilodon"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginEnd="15dp"
                        app:srcCompat="@drawable/smilodon" />
                </LinearLayout>

                <!--                    image-->
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/secondBtn3"
                    android:layout_width="84dp"
                    android:layout_height="48dp"
                    android:autoSizeMaxTextSize="@dimen/bootstrap_h5_text_size"
                    android:autoSizeTextType="uniform"
                    android:text="@string/scd_reset"
                    app:bootstrapBrand="primary"
                    app:roundedCorners="true" />
                <Space
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"/>
                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/secondBtn2"
                    android:layout_width="84dp"
                    android:layout_height="48dp"
                    android:autoSizeMaxTextSize="@dimen/bootstrap_h5_text_size"
                    android:autoSizeTextType="uniform"
                    android:text="@string/scd_send"
                    app:bootstrapBrand="primary"
                    app:roundedCorners="true" />

                <!--                    button-->
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>










</androidx.constraintlayout.widget.ConstraintLayout>