<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p0399_m"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.beardedhen.androidbootstrap.BootstrapLabel
                    android:id="@+id/textView"
                    android:layout_width="220dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    app:bootstrapBrand="success"
                    app:bootstrapText="@string/pwd_title" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/password"
                        android:layout_width="250dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:autofillHints=""
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/pwd_enter"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="5"
                        android:singleLine="true"
                        android:textColorHint="#757575"
                        android:textSize="70sp"
                        app:bootstrapBrand="primary"
                        app:roundedCorners="true" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:id="@+id/button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:minHeight="48dp"
                        app:bootstrapBrand="primary"
                        app:bootstrapSize="lg"
                        app:bootstrapText="@string/pwd_send"
                        app:roundedCorners="true" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/mitarashi_first"
                    android:layout_width="149dp"
                    android:layout_height="238dp"
                    android:rotation="90"
                    android:translationX="-55dp"
                    app:srcCompat="@drawable/mitarashi22"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/neko_first"
                    android:layout_width="201dp"
                    android:layout_height="268dp"
                    android:rotation="-90"
                    android:translationX="260dp"
                    android:translationY="-370dp"
                    app:srcCompat="@drawable/neko22" />

                <ImageView
                    android:id="@+id/upa_first"
                    android:layout_width="234dp"
                    android:layout_height="177dp"
                    app:srcCompat="@drawable/u_pa_22"
                    android:translationY="-350dp"
                    android:translationX="100dp"
                    tools:layout_editor_absoluteY="587dp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>